--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "release": "rm -rf dist && npm run build && cp package*.json dist && cd dist && npm ci --omit=dev && zip -r index.zip ."
   },
+  "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
     "@types/node": "^18.11.9",
@@ -17,7 +18,6 @@
     "@polybase/client": "^0.6.2",
     "@polybase/eth": "^0.6.2",
     "dotenv": "^16.3.1",
-    "joi": "^17.9.2",
     "mongodb": "^5.6.0"
   }
 }
