--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "@data-preservation-programs/RepPoly",
-  "version": "0.0.1",
+  "name": "@dataprograms/repdao-polybase",
+  "version": "1.0.2",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "release": "rm -rf dist && npm run build && cp package*.json dist && cd dist && npm ci --omit=dev && zip -r index.zip ."
+    "release": "rm -rf dist && npm run build && cp package*.json dist && cd dist && npm ci --omit=dev && zip -r index.zip .",
+    "populate": "ts-node-esm src/run.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/data-preservation-programs/RepPoly.git"
   },
   "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "@polybase/auth": "^0.6.2",
-    "@polybase/client": "^0.6.2",
+    "typescript": "^4.9.3",
     "@polybase/eth": "^0.6.2",
     "dotenv": "^16.3.1",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "p-queue": "^7.3.4",
+    "p-retry": "^5.1.2",
+    "@polybase/auth": "^0.6.2"
+  },
+  "dependencies": {
+    "@polybase/client": "^0.6.2"
   }
 }
