--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   },
   "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
+    "@polybase/auth": "^0.6.2",
+    "@polybase/eth": "^0.6.2",
     "@types/aws-lambda": "^8.10.109",
     "@types/node": "^18.11.9",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "@polybase/eth": "^0.6.2",
     "dotenv": "^16.3.1",
     "mongodb": "^5.6.0",
     "p-queue": "^7.3.4",
     "p-retry": "^5.1.2",
-    "@polybase/auth": "^0.6.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@dataprograms/repdao-polybase": "^1.0.6",
     "@polybase/client": "^0.6.2"
   }
 }
